fix: plus en grijs vlak aligned met eerste foto via calc()

--- a/solution-aqua.css
+++ b/solution-aqua.css
@@ -216,7 +216,7 @@
     content: '';
     position: absolute;
     top: 35%;
-    left: 15%;
+    left: calc(50% - 626px);
     transform: translateY(-50%);
     width: 28%;
     height: 60%;
@@ -324,7 +324,7 @@
 .sol-gallery-plus {
     position: absolute;
     top: 60px;
-    left: 18%;
+    left: calc(50% - 640px);
     width: 120px;
     height: 120px;
     pointer-events: none;
